[package]
name = "yarsh"
version = "0.10.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
colored = "2.0.0"
crossterm = "0.26.1"
ctrlc = "3.4.0"
directories = "5.0.1"
formatx = "0.2.1"
is_executable = "1.0.1"
libc = "0.2.145"
log = "0.4.18"
rlua = "0.19.5"
rustyline = "11.0.0"
serde_yaml = "0.9.21"
shellwords = "1.1.0"
simplelog = "0.12.1"
term_size = "0.3.2"
walkdir = "2.3.3"

[dependencies.clap]
version = "4.3.2"
features = [ "derive",]

[dependencies.serde]
version = "1.0.163"
features = [ "derive",]
